Fixed a bug with word wrapping when content is overflowing and avatar shifting.

--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -7,24 +7,24 @@
 .imageAndText {
     display: flex;
     flex-direction: row-reverse;
+    align-items: end;
 
 }
 
 .imageAndText img {
     width: 48px;
     height: 48px;
-    margin-top: 12px;
 }
 
 .text {
     position: relative;
-    min-width: 530px;
-    min-height: 60px;
+    max-width: 530px;
     margin-right: 12px;
     background: #0066CC;
     box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);
     padding: 8px 25px 8px 13px;
     border-radius: 15px 15px 0 15px;
+
 }
 
 .text:after {
@@ -52,6 +52,7 @@
     font-size: 16px;
     line-height: 20px;
     color: #FFFFFF;
+    white-space: normal;
 }
 
 .time {
